[package]
name = "pixel"
version = "0.1.0"
authors = ["allan <a.maubert.jouvet@gmail.com>", "thomas <tbraze@hotmail.fr>", "valentin <valentin.gourdon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { git = "https://github.com/rust-random/rand" }